--- a/app/notes/[id]/NoteDetails.module.css
+++ b/app/notes/[id]/NoteDetails.module.css
@@ -34,16 +34,10 @@
     white-space: pre-wrap;
 }
 
-.down {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 .date {
     font-size: 14px;
     color: #888;
-    /* text-align: right; */
+    text-align: right;
 }
 
 .tag {
@@ -55,20 +49,8 @@
     border: 1px solid #b6d4fe;
     border-radius: 12px;
     max-width: 100px;
+    text-align: center;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-}
-
-.backBtn {
-    align-self: flex-start;
-    padding: 6px 12px;
-    font-size: 14px;
-    color: #000000;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    text-decoration: underline;
-    display: inline-block;
-    background-color: transparent;
 }
